# CARDiAC

./: .gitignore  Get_DeltaPhi_PS.ipynb  Pyccl_Tests.ipynb  README.md  Tutorial.ipynb  cardiac.yml  compute_biases.ipynb  compute_cosmic_shear_biases.ipynb  compute_gal_clustering_biases.ipynb  compute_sFB_power_spectrum.ipynb  pyproject.toml
biases_code/: .gitignore  __init__.py  biases.py  galaxy_clustering_example.ipynb  galaxy_ps.py  utils.py
biases_code/.ipynb_checkpoints/: galaxy_clustering_example-checkpoint.ipynb
cardiac/: __init__.py  fields.py  spectrum.py  templates.py  tracer_spectra.py
code/: biases.py  galaxy_clustering_example.ipynb
new_code/: Field_building.ipynb  Template_building.ipynb  Tutorial.ipynb  __init__.py  bias_integrals.py  fields.py  spectrum.py  templates.py  tracer_spectra.py
notebooks_for_paper/: compute_cosmic_shear_biases.ipynb  compute_gal_clustering_biases.ipynb  compute_sFB_power_spectrum.ipynb  galaxy_clustering_example.ipynb  ggl_tests.ipynb  interlopers.ipynb  plotting_kernels.ipynb  shear_tests.ipynb
old_code/: galaxy_clustering_example.ipynb  utils.py
scripts/: compute_additive_bias_in_parallel.py  compute_biases_in_parallel.py  compute_modecoupling_bias_in_parallel.py
src/cardiac/: bias_integrals.py  fields.py  spectrum.py  templates.py  tracer_spectra.py  utils.py
